[package]
authors = ["Martin Amps <https://twitter.com/martinamps>", "Jeriel Baptista Verissimo <https://twitter.com/J3r137>"]
name = "rattlesnake"
version = "1.0.0"
edition = "2018"

homepage = "https://play.battlesnake.com"
repository = "https://github.com/jerielverissimo/rattlesnake"

readme = "README.md"
keywords = ["battlesnake"]
description = """
A simple Battlesnake written in Rust
"""

[dependencies]
rocket = { version = "0.4.10", default-features = false }
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
log = "0.4.0"
env_logger = "0.9.0"
rand = "0.8.4"

[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = ["json"]
